--- a/test/fixtures/index.html
+++ b/test/fixtures/index.html
@@ -1,9 +1,7 @@
 <html>
-<head>
-<script src="./boot.js"></script>
-<script src="/ketch.js"></script>
-</head>
-<body>
-
-</body>
+  <head>
+    <script src="./boot.js"></script>
+    <script src="/ketch.js"></script>
+  </head>
+  <body></body>
 </html>
