--- a/test/fixtures/index.html
+++ b/test/fixtures/index.html
@@ -1,7 +1,16 @@
 <html>
   <head>
     <script src="./boot.js"></script>
-    <script src="/ketch.js"></script>
+    <script>
+      semaphore.push(['registerPlugin', {
+        init(ketch, config) {
+          console.log('inline plugin', ketch, config)
+        }
+      }])
+    </script>
+    <script src="https://cdn.ketchjs.com/plugins/static/plugins.js"></script>
+    <script src="https://cdn.ketchjs.com/lanyard/static/lanyard.js"></script>
+    <script src="/ketchtag/static/ketch.js"></script>
   </head>
   <body></body>
 </html>
