fix: load plugins from uat cdn;

--- a/test/fixtures/index.html
+++ b/test/fixtures/index.html
@@ -1,16 +1,16 @@
 <html>
   <head>
     <script src="./boot.js"></script>
-    <!-- <script>
+    <script>
       semaphore.push(['registerPlugin', {
         init(ketch, config) {
           console.log('inline plugin', ketch, config)
         }
       }])
-    </script> -->
+    </script>
     <script src="https://cdn.uat.ketchjs.com/lanyard/static/lanyard.js"></script>
+    <script src="https://cdn.uat.ketchjs.com/plugins/static/plugins.js"></script>
     <script src="../ketch.js"></script>
-    <script src="../plugins.js" defer></script>
   </head>
   <body></body>
 </html>
