chore: revert index;

--- a/test/fixtures/index.html
+++ b/test/fixtures/index.html
@@ -8,8 +8,8 @@
         }
       }])
     </script>
-    <script src="https://cdn.uat.ketchjs.com/lanyard/static/lanyard.js"></script>
-    <script src="https://cdn.uat.ketchjs.com/plugins/static/plugins.js"></script>
+    <script src="https://cdn.ketchjs.com/plugins/static/plugins.js"></script>
+    <script src="https://cdn.ketchjs.com/lanyard/static/lanyard.js"></script>
     <script src="../ketch.js"></script>
   </head>
   <body></body>
