fix(kd-5450): prevent race conditions; (#316)

--- a/test/fixtures/index.html
+++ b/test/fixtures/index.html
@@ -10,7 +10,7 @@
     </script>
     <script src="https://cdn.ketchjs.com/plugins/static/plugins.js"></script>
     <script src="https://cdn.ketchjs.com/lanyard/static/lanyard.js"></script>
-    <script src="/ketchtag/static/ketch.js"></script>
+    <script src="../ketch.js"></script>
   </head>
   <body></body>
 </html>
