fix: test language with boot.js

--- a/test/fixtures/index-boot.html
+++ b/test/fixtures/index-boot.html
@@ -1,13 +1,6 @@
 <html>
   <head>
-    <script src="./full.js"></script>
-    <script>
-      semaphore.push(['registerPlugin', {
-        init(ketch, config) {
-          console.log('inline plugin', ketch, config)
-        }
-      }])
-    </script>
+    <script src="./boot.js"></script>
     <script src="https://cdn.ketchjs.com/plugins/static/plugins.js"></script>
     <script src="https://cdn.ketchjs.com/lanyard/static/lanyard.js"></script>
     <script src="../ketch.js"></script>
